<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:background="@drawable/spaider"
            android:text="@string/start"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.494" android:layout_marginBottom="148dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:onClick="age"
            android:fontFamily="@font/comfortaa_light" android:textAllCaps="false"
            android:textSize="22sp" app:layout_constraintVertical_bias="1.0" android:textColor="#FFFFFF"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="375dp"
            android:layout_height="66dp" tools:layout_editor_absoluteX="16dp"
            android:id="@+id/linearLayout2" android:layout_marginTop="156dp" app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edityear" android:layout_weight="1" android:hint="@string/year"
                android:textAlignment="center" android:autofillHints=""/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editmonth" android:layout_weight="1" android:hint="@string/month"
                android:textAlignment="center" android:autofillHints=""/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editday" android:layout_weight="1" android:hint="@string/day"
                android:textAlignment="center"
                android:autofillHints=""/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edithour" android:layout_weight="1" android:hint="@string/hour"
                android:textAlignment="center" android:autofillHints=""/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editminute" android:layout_weight="1" android:hint="@string/minute"
                android:textAlignment="center" android:autofillHints=""/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="368dp"
            android:layout_height="72dp" tools:layout_editor_absoluteX="18dp"
            android:id="@+id/linearLayout" android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" tools:ignore="MissingConstraints">
        <TextView
                android:text="@string/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/viewyear" android:layout_weight="1"
                android:textSize="24sp" android:textAlignment="center"/>
        <TextView
                android:text="@string/dot1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/viewmonth" android:layout_weight="1"
                android:textSize="24sp" android:textAlignment="center"/>
        <TextView
                android:text="@string/dot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/viewday" android:layout_weight="1"
                android:textSize="24sp" android:textAlignment="center"/>
        <TextView
                android:text="@string/dot3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/viewhour" android:layout_weight="1"
                android:textSize="24sp" android:textAlignment="center"/>
        <TextView
                android:text="@string/dot4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/viewminute" android:layout_weight="1"
                android:textSize="24sp" android:textAlignment="center"/>
    </LinearLayout>
    <TextView
            android:text="@string/enter_your_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="22sp"/>
    <TextView
            android:text="@string/your_age_is"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintHorizontal_bias="0.498"
            android:textSize="22sp"/>
    <Button
            android:background="@drawable/spaider"
            android:text="@string/reset"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:id="@+id/reset" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button" tools:ignore="MissingConstraints"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:onClick="clickreset"
            app:layout_constraintHorizontal_bias="0.494" android:fontFamily="@font/comfortaa_light"
            android:includeFontPadding="false" android:capitalize="none" android:textAllCaps="false"
            android:textSize="22sp" android:textColor="#FFFFFF"/>

</android.support.constraint.ConstraintLayout>